Fixing header align issue.

--- a/main.css
+++ b/main.css
@@ -24,14 +24,15 @@ body.dark {
 
 header#header {
   width: 100%;
-  height: 4rem;
+  height: 3rem;
   padding: 1rem 1.5rem;
   box-shadow: 0 0.3rem 0.5rem #000;
 }
 
-header#header>a[href="/"] {
+header#header>a[href] {
   display: flex;
   align-items: center;
+  height: 100%;
 }
 
 img#logo[src] {
